[package]
name = "peek"
version = "0.0.0"
authors = ["RoloEdits <RoloEdits@gmail.com>"]
description = "CLI tool that records system reported values of a program running and outputs them to JSON or CSV"
catagories = ["profile", "benchmark", "cli", "tool", "terminal"]
homepage = "https://github.com/RoloEdits/peek"
repository = "https://github.com/RoloEdits/peek"
readme = "README.md"
license = "MIT"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.3.0"
ctrlc = { version = "3.4.1", features = ["termination"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sysinfo = "0.29.10"
uuid = { version = "1.5.0", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = true

